
AUTOMAKE_OPTIONS = gnu

EXTRA_DIST = AUTHORS CREDITS COPYING NEWS autogen.sh  

MAINTAINERCLEANFILES=\
	configure \
	Makefile.in \
	aclocal.m4 \
	compile \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	config.guess \
	config.sub \
	config.h.in \
	config.h.in~ \
	INSTALL

SUBDIRS= include libfuse-lite libntfs-3g src

doc_DATA = README
